<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="5dp"
    tools:ignore="RtlSymmetry">
    
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp">
        
        <ImageView
            android:id="@+id/img_item_poster"
            android:layout_width="101dp"
            android:layout_height="150dp"
            android:contentDescription="@string/movie_poster"
            android:scaleType="fitXY"
            tools:src="@android:color/darker_gray" />
    </androidx.cardview.widget.CardView>
    
    <TextView
        android:id="@+id/tv_movie_title"
        style="@style/TextViewMovies.Bold"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/cv_item_poster"
        android:fontFamily="@font/quantico"
        android:paddingEnd="10dp"
        android:textColor="#0022ba"
        android:textSize="16sp"
        tools:ignore="RtlSymmetry"
        tools:text="@string/movie_title" />
    
    <TextView
        android:id="@+id/tv_movie_year"
        style="@style/TextViewMovies.Bold"
        android:layout_below="@+id/tv_movie_title"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/cv_item_poster"
        tools:text="@string/year" />
    
    <TextView
        android:id="@+id/tv_movie_details"
        style="@style/TextViewMovies"
        android:layout_below="@+id/tv_movie_year"
        android:layout_toEndOf="@+id/cv_item_poster"
        tools:text="@string/details" />
    
    <TextView
        android:id="@+id/tv_desc_director"
        style="@style/TextViewMovies.Bold"
        android:layout_below="@+id/tv_movie_details"
        android:layout_toEndOf="@+id/cv_item_poster"
        android:text="@string/director" />
    
    <TextView
        android:id="@+id/tv_movie_director"
        style="@style/TextViewMovies"
        android:layout_below="@+id/tv_movie_details"
        android:layout_toEndOf="@+id/tv_desc_director"
        tools:text="@string/russo_brothers" />
    
    <TextView
        style="@style/TextViewMovies.Bold"
        android:layout_below="@+id/tv_desc_director"
        android:layout_toEndOf="@+id/cv_item_poster"
        android:text="@string/stars" />
    
    <TextView
        android:id="@+id/tv_movie_stars"
        style="@style/TextViewMovies"
        android:layout_below="@id/tv_movie_director"
        android:layout_toEndOf="@id/tv_desc_director"
        tools:text="@string/rdj" />
</RelativeLayout>