<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MovieDetailsActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_item_details"
        android:orientation="vertical"
        android:padding="16dp">
        
        <include layout="@layout/item_movie" />
        
        <TextView
            android:id="@+id/tv_synopsis"
            style="@style/TextViewMovies.Bold.Details"
            android:text="@string/synopsis"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="6dp"
            >
            
            <TextView
                android:id="@+id/tv_movie_synopsis"
                style="@style/TextViewMovies"
                tools:text="@string/synopsis_placeholder" />
        </ScrollView>
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:orientation="horizontal">
            
            <TextView
                android:id="@+id/tv_chronological_index"
                style="@style/TextViewMovies.Bold.Details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="@string/chronological_index" />
            
            <TextView
                android:id="@+id/tv_phase"
                style="@style/TextViewMovies.Bold.Details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="@string/phase" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>