<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".AboutActivity">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile_photo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            tools:src="@drawable/img_profile_photo" />
        
        <TextView
            android:id="@+id/tv_name"
            style="@style/TextViewAbout.Name"
            android:layout_marginTop="28dp"
            android:text="@string/name"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_profile_photo" />
        
        <TextView
            android:id="@+id/tv_email"
            style="@style/TextViewAbout"
            android:layout_marginTop="5dp"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />
        
        <TextView
            android:id="@+id/tv_study_program"
            style="@style/TextViewAbout.SchoolInfo"
            android:text="@string/informatics"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"
            app:layout_constraintVertical_bias="0.68"/>
        
        <TextView
            android:id="@+id/tv_student_id"
            style="@style/TextViewAbout.SchoolInfo"
            android:layout_marginTop="8dp"
            android:text="@string/nim"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_study_program" />
        
        <TextView
            style="@style/TextViewAbout.SchoolInfo"
            android:layout_marginTop="8dp"
            android:text="@string/university"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_student_id" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>